# grandma-ai

./: README.md  db.sqlite3  project-plan  pyproject.toml
User Stories Summaries/: User Story summaries - Andrew Hoang.csv  User Story summaries - Combined.csv  User Story summaries - Jeremy Bui.csv  User Story summaries - Minseok Lee.csv  User Story summaries - Yann Arif.csv
common/: forms.py
django_project/: settings.py  urls.py
docs/: tech_stack_choice.txt
docs/User Stories/: User Story 1.txt  User Story 2.txt  User Story 3.txt  User Story 4.txt  User Story 5.txt
grandmaai/: admin.py  apps.py  forms.py  models.py  urls.py
grandmaai/migrations/: 0001_initial.py  0002_auto_20230328_0243.py  0003_alter_level_level.py  0004_alter_level_level.py  0005_alter_level_level.py  0006_alter_level_level.py  0007_alter_level_level.py  0008_alter_level_level.py  0009_auto_20230329_0421.py  0010_alter_phone_phone.py
grandmaai/views/: base_views.py  channel_views.py  email_views.py  goal_views.py  level_views.py  phone_views.py  subscribed_views.py
prototype/: prototype_link.txt
static/: style.css
templates/: base.html  template_message.html
templates/common/: login.html  signup.html
templates/grandmaai/: channel_create.html  email_create.html  goal_create.html  grandma_ai.html  level_create.html  phone_create.html  subscribed.html
