[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "django-template"
version = "0.1.0"
[tool.poetry.dependencies]
Django = "^3.0"
python = "^3.8"
django-phone-field = "^1.8.1"
pybo = "^0.8.0"
openai = "^0.26.5"
twilio = "^7.17.0"
[tool.poetry.dev-dependencies]
